# photoAWSDemo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
docker/: ministack.Dockerfile
docs/superpowers/plans/: 2026-04-13-photo-pipeline-local-dev.md  2026-04-14-multi-stage-pipeline.md
docs/superpowers/specs/: 2026-04-13-photo-pipeline-local-dev-design.md  2026-04-14-multi-stage-pipeline-design.md  2026-04-20-langsmith-to-langfuse-migration-design.md  2026-04-20-sfn-activity-e2e-design.md  2026-04-21-aws-batch-integration-design.md
migrations/: 001_create_schema.down.sql  001_create_schema.sql  001_create_schema.up.sql  002_add_tags_vlm.sql
scripts/: setup_ministack.py  test_e2e.py
services/get_photo_ids/: Dockerfile  pyproject.toml
services/get_photo_ids/src/get_photo_ids/: handler.py
services/mark_complete/: Dockerfile  pyproject.toml
services/mark_complete/src/mark_complete/: handler.py
services/scheduler/: Dockerfile  pyproject.toml
services/scheduler/src/scheduler/: handler.py
services/tagger/: Dockerfile  pyproject.toml
services/tagger/src/tagger/: handler.py
services/timeout_checker/: Dockerfile  pyproject.toml
services/timeout_checker/src/timeout_checker/: handler.py
services/vlm_extractor/: Dockerfile  pyproject.toml
services/vlm_extractor/src/vlm_extractor/: handler.py
services/worker/: Dockerfile  pyproject.toml
services/worker/src/worker/: main.py
state-machines/: pipeline-aws.json  pipeline-local.json
terraform/: aws-cpu.tfvars  aws.tfvars  batch.tf  build_lambda_zip.sh  create_sfn.sh  ecs.tf  lambda.tf  local.tfvars  main.tf  outputs.tf  s3.tf  sfn.tf  sqs.tf  variables.tf
tests/: conftest.py  test_batch_manager.py  test_config.py  test_get_photo_ids.py  test_mark_complete.py  test_scheduler.py  test_tagger.py  test_tracing.py  test_vlm_extractor.py  test_worker.py
