[project]
name = "photo-pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "common",
]

[tool.uv.workspace]
members = ["packages/*", "services/*"]

[tool.uv.sources]
common = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "numpy>=2.4.4",
    "pytest>=8.0.0",
    "ruff>=0.11.0",
    "langsmith>=0.3.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
