[project]
name = "get-photo-ids"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "common",
    "boto3>=1.28.0",
    "langfuse>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/get_photo_ids"]

[tool.uv.sources]
common = { workspace = true }
