[project]
name = "worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "common",
    "boto3>=1.28.0",
    "insightface",
    "onnxruntime",
    "opencv-python-headless",
    "numpy",
    "langfuse>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]

[tool.uv.sources]
common = { workspace = true }
